--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "framer-motion": "^10.12.18",
+    "lottie-react": "^2.4.0",
     "next": "13.4.9",
     "postcss": "8.4.25",
     "react": "18.2.0",
